<resources>
    <string name="app_name">PlannerHQ</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navi_calendar">CALENDAR</string>
    <string name="navi_home">HOME</string>
    <string name="navi_places">PLACES</string>
    <string name="not_set">NOT SET</string>
    <string name="label_new_event">NEW EVENT</string>
    <string name="label_asc">ASC</string>
    <string name="label_desc">DESC</string>
    <string name="label_setting">SETTING</string>
    <string name="title_activity_maps">Map</string>
    <string name="label_set_startDate">SET START DATE</string>
    <string name="label_set_endDate">SET END DATE</string>
    <string name="label_save">SAVE</string>
    <string name="label_centreYourself">CURRENT LOCATION</string>
    <string name="label_title">Title</string>
    <string name="label_venue">Venue</string>
    <string name="label_start_date">Start Date</string>
    <string name="label_end_date">End Date</string>
    <string name="label_movie_title" >Movie Title</string>
    <string name="label_movie_year">Year</string>
    <string name="label_remove">Remove</string>
    <string name="label_edit">Edit</string>
    <string name="label_set_movie">SET MOVIE</string>
    <string name="label_set_attendee">SET ATTENDEES</string>
    <string name="label_add_movie">Add Movie</string>
    <string name="label_back">Back</string>
    <string name="description_movie">Movie Poster</string>
    <string name="channel_name">Planner Channel</string>
    <string name="channel_description">Planner Channel For Notification</string>
</resources>
