<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="8dp">


        <TextView
            android:id="@+id/list_item_start_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/list_item_end_date"

            android:layout_alignEnd="@+id/list_item_end_date"
            android:layout_marginEnd="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="12dp"
            android:text="@string/label_start_date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/list_item_end_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@+id/list_item_position"
            android:layout_marginEnd="6dp"
            android:layout_marginBottom="0dp"
            android:layout_toStartOf="@+id/list_item_position"
            android:text="@string/label_end_date"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/list_item_venue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/list_item_title"
            android:layout_alignStart="@+id/list_item_title"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:ellipsize="end"
            android:maxLength="25"
            android:text="@string/label_venue"
            android:singleLine="true"
            app:layout_constraintStart_toStartOf="@+id/list_item_title"
            app:layout_constraintTop_toBottomOf="@+id/list_item_title" />

        <TextView
            android:id="@+id/list_item_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="0dp"
            android:layout_marginTop="0dp"
            android:maxLines="1"
            android:text="@string/label_title"
            android:textSize="24sp"
            android:ellipsize="end"
            android:maxLength="16"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/list_item_position"
            android:layout_width="37dp"
            android:layout_height="47dp"
            android:layout_alignTop="@+id/list_item_title"
            android:layout_alignBottom="@+id/list_item_venue"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="11dp"
            android:layout_marginBottom="0dp"
            android:gravity="center"
            android:text="1"
            android:textSize="30sp" />


    </RelativeLayout>
</android.support.v7.widget.CardView>