<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="32dp">

    <EditText
        android:id="@+id/title_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="Event title"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/start_date_btn"
        app:layout_constraintStart_toStartOf="@+id/end_date_btn"
        app:layout_constraintTop_toBottomOf="@+id/end_date_btn" />

    <EditText
        android:id="@+id/venue_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="Event venue"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/title_label"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/title_label"
        app:layout_constraintTop_toBottomOf="@+id/title_label" />

    <EditText
        android:id="@+id/location_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="Event location"
        android:singleLine="true"
        app:layout_constraintEnd_toEndOf="@+id/venue_label"
        app:layout_constraintStart_toStartOf="@+id/venue_label"
        app:layout_constraintTop_toBottomOf="@+id/venue_label" />

    <Button
        android:id="@+id/start_date_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="16dp"
        android:text="@string/label_set_startDate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dialog_add_event_toolbar" />

    <Button
        android:id="@+id/end_date_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_set_endDate"
        app:layout_constraintEnd_toEndOf="@+id/start_date_btn"
        app:layout_constraintStart_toStartOf="@+id/start_date_btn"
        app:layout_constraintTop_toBottomOf="@+id/start_date_btn" />

    <android.support.v7.widget.Toolbar
        android:id="@+id/dialog_add_event_toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/edit_movie_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/label_set_movie"
        app:layout_constraintEnd_toEndOf="@+id/location_label"
        app:layout_constraintStart_toStartOf="@+id/location_label"
        app:layout_constraintTop_toBottomOf="@+id/location_label" />


    <Button
        android:id="@+id/edit_attendee_btn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/label_set_attendee"
        app:layout_constraintEnd_toEndOf="@+id/edit_movie_btn"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/edit_movie_btn"
        app:layout_constraintTop_toBottomOf="@+id/edit_movie_btn" />

</android.support.constraint.ConstraintLayout>