<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="8dp">

        <ImageView
            android:id="@+id/movie_item_pic1"
            android:layout_width="200dp"
            android:layout_height="360dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:adjustViewBounds="false"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/avatar" />

        <ImageView
            android:id="@+id/movie_item_pic2"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignTop="@id/movie_item_pic1"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="8dp"
            android:scaleType="matrix"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/movie_item_pic1"
            app:srcCompat="@drawable/avatar" />

        <TextView
            android:id="@+id/movie_item_label"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/label_movie_title"
            android:textSize="18sp"
            app:layout_constraintBottom_toTopOf="@+id/movie_item_title"
            app:layout_constraintEnd_toEndOf="@+id/movie_item_title"
            app:layout_constraintStart_toStartOf="@+id/movie_item_title" />

        <TextView
            android:id="@+id/movie_item_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:text="@string/not_set"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/movie_item_year"
            app:layout_constraintStart_toStartOf="@+id/textView10" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/label_movie_year"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/movie_item_pic1"
            app:layout_constraintEnd_toStartOf="@+id/movie_item_year"
            app:layout_constraintStart_toStartOf="@+id/movie_item_pic3" />

        <TextView
            android:id="@+id/movie_item_year"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/not_set"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="@+id/textView10"
            app:layout_constraintEnd_toEndOf="@+id/movie_item_pic3" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="238dp" />

        <ImageView
            android:id="@+id/movie_item_pic3"
            android:layout_width="0dp"
            android:layout_height="75dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toTopOf="@+id/movie_item_label"
            app:layout_constraintEnd_toEndOf="@+id/movie_item_pic2"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/movie_item_pic2"
            app:srcCompat="@drawable/avatar" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="376dp"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="323dp"
            app:layout_constraintTop_toTopOf="parent" />
    </android.support.constraint.ConstraintLayout>

</android.support.v7.widget.CardView>